#21054 "Доработка юзабилити и дизайна Superfly" in progress
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@932 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelCheckBoxRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelCheckBoxRow.html
@@ -1,10 +1,10 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-  <li class="text-field">
-    <span class="field-checkbox-span">
-      <input wicket:id="field-id" type="checkbox" class="form-field-checkbox">
-    </span>
-    <label wicket:id="label-id" for="name" class="field-label-text">Label name</label>
-  </li>
+    <div class="control-group">
+        <label wicket:id="label-id" for="name" class="control-label">Label name</label>
+        <div class="controls">
+            <input wicket:id="field-id" type="checkbox">
+        </div>
+    </div>
 </wicket:panel>
 </html>
