--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/ConfirmPanel.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/ConfirmPanel.html
@@ -1,9 +1,11 @@
+<html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-	<div class="dinamicPanel">	
+<div class="alert">
 	<form wicket:id="cform">
-	<span wicket:id="message">Here goes confirm message</span>&nbsp;&nbsp;&nbsp;
-	<input type="submit" wicket:id="confirm" value="Confirm" class="button"/>&nbsp;&nbsp;&nbsp;
-	<input type="submit" wicket:id="cancel" value="Cancel" class="button"/>
+        <strong><span wicket:id="message">Here goes confirm message</span></strong>&nbsp;&nbsp;&nbsp;
+        <input type="submit" wicket:id="confirm" value="Confirm" class="btn btn-warning"/>&nbsp;&nbsp;&nbsp;
+        <input type="submit" wicket:id="cancel" value="Cancel" class="btn"/>
 	</form>
-	</div>
+</div>
 </wicket:panel>
+</html>
