#21054 "Доработка юзабилити и дизайна Superfly" in progress
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@934 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -71,6 +71,7 @@ html, body{
     .s-filter-items > li{
         display: inline-block;
         margin-left: 20px;
+        vertical-align: top;
     }
     .s-filter-items > li:first-child {margin-left: 0;}
 
@@ -189,7 +190,9 @@ html, body{
         padding-top: 200px;
     }
 
-
+div.wicket-modal div.w_caption{
+    height: 2.6em;
+}
 
 .s-dropdown{
     display: inline;
