Доработка юзабилити и дизайна Superfly
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@944 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -125,6 +125,15 @@ html, body{
     }
 
 /*      COMPONENTS              */
+.row-fluid .s-offset05 {
+    margin-left: 5%;
+    *margin-left: 5%;
+}
+.row-fluid .s-offset05:first-child {
+    margin-left: 4.547008547008547%;
+    *margin-left: 4.440625568285142%;
+}
+
 .s-legend-btn{
     position: absolute;
     top: 65px;
