Fixed double Granted label
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@964 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
@@ -19,7 +19,7 @@
                  <div  class="s-mapping-table">
                      <div class="s-mapping-header row-fluid">
                          <div class="span1 s-mapping-chb-item"><input type="checkbox" wicket:id="master-checkbox-unmap"/></div>
-                         <div class="span11">Granted <span wicket:id="unmapped-item-name"></span></div>
+                         <div class="span11">Available <span wicket:id="unmapped-item-name"></span></div>
                      </div>
                      <ul id="unmapped-list" class="s-mapping-body unstyled">
                          <li class="s-mapping-row row-fluid" wicket:id="unmapped-list">
